initial tests and plot

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,13 @@ install_requires =
     weylchamber
     matplotlib
     LovelyPlots
+    tqdm
 
 [options.extras_require]
 dev =
+    jupyter
     ipykernel
+    ipywidgets
     pre-commit
     pylatexenc
 format =
