--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "QASMBench"]
 	path = QASMBench
 	url = https://github.com/evmckinney9/QASMBench
+[submodule "red-queen"]
+	path = red-queen
+	url = https://github.com/evmckinney9/red-queen
