qiskit interface, metrics printer

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/QASMBench"]
 	path = submodules/QASMBench
 	url = https://github.com/pnnl/QASMBench
+[submodule "submodules/MQTBench"]
+	path = submodules/MQTBench
+	url = https://github.com/cda-tum/MQTBench.git
