--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ install_requires =
     matplotlib
     LovelyPlots
     tqdm
+    monodromy @ git+https://github.com/evmckinney9/monodromy.git
 
 [options.extras_require]
 dev =
