--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ install_requires =
     matplotlib
     LovelyPlots
     tqdm
+    mqt.bench # this is a submodule but we interface with it directly
     monodromy @ git+https://github.com/evmckinney9/monodromy.git
 
 [options.extras_require]
