refactor metrics and runner, adds baseline qiskit, closes #15

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ install_requires =
     matplotlib
     LovelyPlots
     tqdm
-    supermarq
+    # supermarq # don't include this one, I think it has too many conflicting dependencies
     mqt.bench
     monodromy @ git+https://github.com/evmckinney9/monodromy.git
 
