--- a/setup.cfg
+++ b/setup.cfg
@@ -9,14 +9,14 @@ python_requires = >=3.9
 install_requires =
     numpy
     scipy
-    qiskit
+    qiskit~=0.43.3
     qutip
     weylchamber
     matplotlib
     LovelyPlots
     tqdm
     # supermarq # don't include this one, I think it has too many conflicting dependencies
-    mqt.bench
+    mqt.bench==1.0.3
 
 [options.extras_require]
 dev =
