remove mqt, due to some package conflicts
more info: https://github.com/search\?q\=pytket+_TEMP_BIT_NAME\&type\=issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ install_requires =
     LovelyPlots
     tqdm
     # supermarq # don't include this one, I think it has too many conflicting dependencies
-    mqt.bench==1.0.3
+    # mqt.bench==1.0.3
 
 [options.extras_require]
 dev =
