--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ python_requires = >=3.9
 install_requires =
     numpy
     scipy
-    qiskit~=0.43.3
+    qiskit #~=0.43.3
     qutip
     weylchamber
     matplotlib
